# isolate-elf

./: .gitignore  README.md  RELEASING.md  pyproject.toml  version.json
.github/workflows/: ci.yml  release.yml
build_tools/: make_release.py
integration/: conftest.py  test_bzip2.py  test_cohabitation.py  test_elfutils.py  test_expat.py  test_gmp.py  test_hwloc.py  test_libbacktrace.py  test_libcap.py  test_libdrm.py  test_liblzma.py  test_libpciaccess.py  test_ncurses.py  test_numactl.py  test_sqlite3.py  test_zlib.py  test_zstd.py  verify.py
src/isolate_elf/: __init__.py  __main__.py  cli.py  elf.py  elf_rewrite.py  elf_types.py  filters.py  header.py  linker_script.py  model.py  pipeline.py  rename.py  trampoline.py
src/isolib/: __init__.py  __main__.py  cli.py  elf.py  elf_rewrite.py  elf_types.py  filters.py  header.py  linker_script.py  model.py  pipeline.py  rename.py  toolchain.py  trampoline.py
tests/: conftest.py  test_elf.py  test_filters.py  test_header.py  test_linker_script.py  test_pipeline.py  test_rename.py  test_trampoline.py
tests/testlib/: testlib.c  testlib_versioned.c  testlib_versioned.map
