[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isolib"
version = "0.1.0"
description = "ELF symbol isolation for bundled system dependencies"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
isolib = "isolib.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "integration"]
