[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isolate-elf"
dynamic = ["version"]
description = "ELF symbol isolation for bundled system dependencies"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Repository = "https://github.com/ROCm/isolate-elf"

[project.scripts]
isolate-elf = "isolate_elf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "isolate_elf.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests", "integration"]
